<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    >

    <data class="WheatherDataBinder">
        <import type="com.iprogrammer.modules.loginmodule.view.bindingadapter.BindingAdapterWheatherData" />

        <variable
            name="wheatherDataViewModel"
            type="com.iprogrammer.modules.userdatamodule.viewmodel.WheatherDataViewModel"/>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/rlText"
        android:layout_margin="@dimen/dimen_10dp"

        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            android:text="@string/enterCityName" />

        <AutoCompleteTextView
            android:layout_marginTop="@dimen/dimen_50dp"
            android:visibility="visible"
            android:id="@+id/txtCityName"
            android:ems="10"
            inputFieldsValidate="@{wheatherDataViewModel}"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:text="@{wheatherDataViewModel.cityName}"
            android:layout_marginBottom="@dimen/dimen_50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />


        <Button
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_50dp"
            android:id="@+id/btnSearch"
            android:gravity="center"
            android:textAllCaps="false"
            android:clickable="true"
            android:enabled="@{wheatherDataViewModel.isEnable}"
            android:textColor="@color/white"
            android:onClick="@{() -> wheatherDataViewModel.searchWheatherData()}"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/dimen_50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtCityName"
            android:text="@string/search"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlView"
            android:visibility="gone"
            android:background="@drawable/borderlessleft"
            android:layout_below="@+id/btnSearch"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:layout_marginLeft="@dimen/dimen_30dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/llCity"
                android:padding="@dimen/acc_margin_top"
                >




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cityName"
                android:id="@+id/txtCity"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18sp"
                />


                <TextView
                    android:id="@+id/txtDate"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_30dp"
                    android:text="@{wheatherDataViewModel.cityText}"
                    android:textSize="@dimen/dimen_16sp"
                    android:textColor="#000">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/llDate"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_below="@+id/llCity"
                android:padding="@dimen/acc_margin_top"

                >




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:id="@+id/txtDateText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    />


                <TextView
                    android:id="@+id/txtMaxText"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_30dp"
                    android:text="@{wheatherDataViewModel.day}"
                    android:textSize="@dimen/dimen_16sp"
                    android:textColor="#000">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/llMaxTemp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_below="@+id/llDate"
                android:padding="@dimen/acc_margin_top"

                >




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:id="@+id/txtMax"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    />


                <TextView
                    android:id="@+id/txtMaxTemp"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginLeft="@dimen/dimen_30dp"
                    android:text="@{wheatherDataViewModel.maxTemp}"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="bold">


                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/llMinTemp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_below="@+id/llMaxTemp"
                android:padding="@dimen/acc_margin_top"

                >




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:id="@+id/txtMin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    />


                <TextView
                    android:id="@+id/txtMinTemp"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@{wheatherDataViewModel.minTemp}"
                    android:textSize="@dimen/dimen_16sp"
                    android:layout_marginLeft="@dimen/dimen_30dp"
                    android:textColor="#000">

                </TextView>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>